# ChangeLog for media-libs/gdk-pixbuf
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gdk-pixbuf/Attic/ChangeLog,v 1.12 2002/06/24 02:13:19 azarah Exp $

*gdk-pixbuf-0.18.0-r1 (24 Jun 2002)

  24 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :

  Convert to use libtool.eclass.

*gdk-pixbuf-0.18.0 (19 Jun 2002)

  19 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> gdk-pixbuf-0.18.0.ebuild:

  Version bump.

*gdk-pixbuf-0.17.0 (05 Jun 2002)

  05 Jun 2002; Olivier R. <doctomoe@gentoo.org> gdk-pixbuf-0.17.0.ebuild:

  Added media-libs/imlib as dependency, as it is needed to compile properly.

*gdk-pixbuf-0.17.0 (20 Apr 2002)

*gdk-pixbuf-0.16.0-r9 (12 Apr 2002)

  12 Apr 2002; Seemant Kulleen <seemant@gentoo.org> gdk-pixbuf-0.16.0-r9.ebuild:

  Updated to depend on the new libpng (which requires that this be recompiled
  against that).

*gdk-pixbuf-0.16.0-r8 (8 Apr 2002)

  8 Apr 2002; M.Schlemmer <azarah@gentoo.org> gdk-pixbuf-0.16.0-r8.ebuild :

  Change to use the "virtualx" eclass. Some cleanups.

  3 Apr 2002; M.Schlemmer <azarah@gentoo.org> gdk-pixbuf-0.16.0-r7.ebuild :

  Remove unneeded auto* stuff.

*gdk-pixbuf-0.16.0-r7 (2 Apr 2002)

  2 Apr 2002; Seemant Kulleen <seemant@gentoo.org> gdk-pixbuf-0.16.0-r7.ebuild :

  For the record: blocke is a sheer genius.  His idea was to look at an RPM, so
  I had a look at Mandrake's src.rpm, and lo! David BAUDENS 
  <baudens@mandrakesoft.com> had a fix for compiling without the display.

*gdk-pixbuf-0.16.0-r6 (31 Mar 2002)

  31 Mar 2002; Seemant Kulleen <seemant@gentoo.org> gdk-pixbuf-0.16.0-r6.ebuild:

  GNOME support is no longer an option -- it is built-in automatically, because
  downstream applications tend to expect it in this package.

*gdk-pixbuf-0.16.0-r5 (16 Mar 2002)

  16 Mar 2002; M.Schlemmer <azarah@gentoo.org> :

  Libtoolize to fix "rebuild" bug.
