@@ -1,6 +1,6 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License, v2 or later
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gdk-pixbuf/Attic/gdk-pixbuf-0.18.0-r1.ebuild,v 1.4 2002/07/23 23:39:34 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gdk-pixbuf/Attic/gdk-pixbuf-0.18.0-r1.ebuild,v 1.5 2002/07/25 21:56:57 spider Exp $
 
 inherit virtualx libtool
 
@@ -14,7 +14,8 @@ DEPEND="media-libs/jpeg
 	=x11-libs/gtk+-1.2*
 	>=media-libs/imlib-1.9.14-r1
 	>=media-libs/libpng-1.2.1
-	>=gnome-base/gnome-libs-1.4.1.2-r1"
+	>=gnome-base/gnome-libs-1.4.1.2-r1
+	=sys-libs/db-1.85*"
 # We need gnome-libs here, else gnome support do not get compiled into
 # gdk-pixbuf (the GnomeCanvasPixbuf library )
 
