@@ -1,8 +1,11 @@
 # ChangeLog for media-libs/gdk-pixbuf
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gdk-pixbuf/Attic/ChangeLog,v 1.12 2002/06/24 02:13:19 azarah Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gdk-pixbuf/Attic/ChangeLog,v 1.13 2002/07/25 21:56:56 spider Exp $
 
 *gdk-pixbuf-0.18.0-r1 (24 Jun 2002)
+  25 Jul 2002; Spider <spider@gentoo.org> :
+  seems this needs db-1.85 or it will fail to build.
+  added dependency. per bug #5382
 
   24 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :
 
